--- a/xsandos/xsandos/src/App.css
+++ b/xsandos/xsandos/src/App.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 .game-status {
-  font-size: 1.2em;
+  font-size: 2.2em;
   margin: 20px 0;
 }
 
@@ -34,8 +34,8 @@ h1 {
 .cell {
   width: 150px;
   height: 150px;
-  background-color: #ccf8f4;
-  color: rgb(253, 253, 253);
+  background-color: #6efbef;
+  color: rgb(245, 254, 119);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -49,6 +49,7 @@ h1 {
 
 .reset-button {
   padding: 10px 20px;
-  font-size: 1em;
+  font-size: 3em;
   cursor: pointer;
+  background-color: transparent;
 }
