--- a/xsandos/xsandos/src/index.css
+++ b/xsandos/xsandos/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #f5b5b5;
+  background-color: #f9c3c3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,11 +17,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #fbfbfc;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #fbfbfc;
 }
 
 body {
@@ -33,7 +33,7 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3.8em;
   line-height: 1.1;
 }
 
@@ -49,7 +49,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #f6f6f8;
 }
 button:focus,
 button:focus-visible {
@@ -62,7 +62,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #fafafa;
   }
   button {
     background-color: #f9f9f9;
