--- a/xsandos/xsandos/src/App.css
+++ b/xsandos/xsandos/src/App.css
@@ -34,8 +34,8 @@ h1 {
 .cell {
   width: 150px;
   height: 150px;
-  background-color: #6efbef;
-  color: rgb(245, 254, 119);
+  background-color: #ffffff;
+  color: rgb(7, 8, 0);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -52,4 +52,6 @@ h1 {
   font-size: 3em;
   cursor: pointer;
   background-color: transparent;
+  border: 2px solid #010000;
+
 }
