--- a/xsandos/xsandos/src/index.css
+++ b/xsandos/xsandos/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #f9c3c3;
+  color: rgb(4, 0, 0);
+  background-color: #fadfdf;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -35,6 +35,8 @@ body {
 h1 {
   font-size: 3.8em;
   line-height: 1.1;
+  margin: 0.5em 0;
+  padding-top: 5px;
 }
 
 button {
@@ -44,7 +46,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #080000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
